--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -80,3 +80,22 @@ p {
   padding-left: 15px;
   padding-right: 15px;
 }
+
+@media screen and (min-width: 700px){
+  .menu {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    align-items: center;
+  }
+  .bannerPortfolio{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 699px){
+  
+}
