--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -69,6 +69,9 @@
 }
 
 img {
+  display: flex;
+  align-items: center;
+  background-color: khaki;
   max-width: 100%;
 }
 
@@ -79,4 +82,37 @@ img {
 p {
   padding-left: 15px;
   padding-right: 15px;
+}
+.desktop {
+  display: none;
+}
+
+.skills{
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+
+@media screen and (min-width : 700px) {
+
+  .navbar{
+    justify-content: space-between;
+  }
+  
+  .instructions{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+.desktop {
+  display: block;
+}
+
+.skills {
+  flex-direction: row-reverse;
+  justify-content: center;
+}
+
+
 }
